[package]
name = "freshfetch"
version = "0.1.1"
authors = ["K4rakara <jack@insertdomain.name>"]
edition = "2018"
build = "./src/build.rs"

[dependencies]
chrono = "0.4.13"
cmd_lib = "0.8.2"
lazy_static = "1.4.0"
regex = "1.3.9"
sysinfo = "0.15.0"
term_size = "0.3.2"
uname = "0.1.1"
users = "0.10.0"

[dependencies.clap]
version = "2.33.2"
default-features = false
features = [ "vec_map" ]

[dependencies.mlua]
version = "0.4.1"
features = [ "luajit" ]

[build-dependencies.clml_rs]
git = "https://github.com/K4rakara/clml-rs"

