[package]
name = "freshfetch"
version = "0.2.0"
authors = ["K4rakara <jack@insertdomain.name>"]
edition = "2018"
build = "./src/build.rs"

[dependencies]
chrono = "0.4.13"
cmd_lib = "0.8.2"
cmd_lib_core = "0.1.0"
lazy_static = "1.4.0"
regex = "1.3.9"
sysinfo = "0.15.0"
term_size = "0.3.2"
uname = "0.1.1"
users = "0.10.0"

[dependencies.clap]
version = "2.33.3"

[dependencies.mlua]
version = "0.5.3"
features = [ "luajit", "vendored" ]

[build-dependencies.clml_rs]
git = "https://github.com/K4rakara/clml-rs"

